# chatushka

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  config.yml  docker-compose.yml  justfile  pyproject.toml  readme.md  rustfmt.toml
.github/workflows/: build.yml  lint.yml  pypi.yml  testing.yml  tests.yml
bot/: main.py  settings.py
bot/internal/: data_dir.py  mute.py
bot/matchers/: __init__.py  bobuk_jokes.py  eight_ball.py  helpers.py  lukashenko.py  philosophy.py  suicide.py  welcoming.py
bot/matchers/admin/: __init__.py  mute.py  pin.py
chatushka/: __init__.py  __main__.py  __version__.py  _bot.py  _chatushka.py  _constants.py  _errors.py  _handlers.py  _matchers.py  _models.py  _sentry.py  _transport.py  _types.py  bot.py  bot_api.py  constants.py  listeners.py  models.py  protocols.py  settings.py  utils.py  watch_dog_bot.py
chatushka/bot/: cli_main.py  main.py  mongodb.py  settings.py  utils.py
chatushka/bot/data/: eight_ball.yaml  lukashenko.txt
chatushka/bot/internal/: captcha_state.py  data_dir.py  mute.py
chatushka/bot/libs/: mute.py
chatushka/bot/libs/heroes/: messages.py
chatushka/bot/libs/heroes/cruds/: activations.py  months.py  weeks.py
chatushka/bot/matchers/: __init__.py  bobuk_jokes.py  eight_ball.py  helpers.py  heroes.py  lukashenko.py  philosophy.py  suicide.py  welcoming.py
chatushka/bot/matchers/admin/: __init__.py  _matcher.py  mute.py  pin.py  utils.py
chatushka/bot/matchers/users/: __init__.py  bobuk_jokes.py  eight_ball.py  helpers.py  lukashenko.py  philosophy.py  suicide.py  welcoming.py
chatushka/bot/models/: heroes.py
chatushka/core/: __main__.py  __version__.py  bot.py  chatushka.py  logger.py  models.py  protocols.py  telegram.py  utils.py
chatushka/core/matchers/: __init__.py  base.py  chat_users_movements.py  commands.py  cron.py  events.py  regex.py
chatushka/core/services/: base.py
chatushka/core/services/mongodb/: settings.py  utils.py  wrapper.py
chatushka/core/transports/: models.py  telegram_bot_api.py  utils.py
chatushka/matchers/: __init__.py  base.py  commands.py  cron.py  events.py  regex.py
chatushka/samples/: __init__.py  eight_ball.py  helpers.py  homm3.py  id.py  jokes.py
chatushka/samples/handlers/: eight_ball.py  helpers.py  id.py  jokes.py
chatushka/samples/heroes/: __init__.py  handlers.py  matchers.py  messages.py  models.py  mongodb.py  settings.py  utils.py
chatushka/samples/heroes/cruds/: activations.py  months.py  weeks.py
chatushka/samples/matchers/heroes/: __init__.py  handlers.py  matchers.py  messages.py  models.py  utils.py
chatushka/samples/matchers/heroes/cruds/: activations.py  months.py  weeks.py
chatushka/services/: base.py
chatushka/services/mongodb/: depends.py  settings.py  utils.py  wrapper.py
chatushka/transports/: models.py  telegram_bot_api.py
example/: __main__.py  ball8.txt  config.yml  constants.py  main.py
src/: actions.rs  bot_api.rs  chat_listener.rs  cli_args.rs  config.rs  constants.rs  errors.rs  lib.rs  listener.rs  logger.rs  main.rs  matcher.rs  responses.rs  run.rs  settings.rs
src/actions/: base.rs  message.rs  mod.rs  rhai.rs
src/bot/: api.rs  bot.rs  listener.rs  mod.rs  responses.rs
src/matchers/: base.rs  command.rs  mod.rs  regex.rs
tests/: conftest.py  test_foo.py  test_matchers.py  test_transport.py
twowires/: __main__.py  bot.py  commands.py  events.py  messages.py  protocols.py  settings.py  telegram.py  telegram_bot_api.py  tokens.py  types.py  watch_dog_bot.py
twowires/matchers/: __init__.py  base.py  commands.py  cron.py  events.py  protocols.py  regex.py  types.py
twowires/models/: cache_file.py  telegram_types.py
twowires/transports/: telegram_bot_api.py
