[package]
name = "chatushka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
regex = "1.7.1"

[[bin]]
name = "mentionbot"
path = "src/main.rs"
bench = false
doc = false
