[package]
name = "chatushka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
regex = "1.7.1"
clap = { version = "4.1.4", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
serde_yaml = "0.9.17"
rhai = { git = "https://github.com/rhaiscript/rhai" }
rhai-rand = "0.1.4"

[[bin]]
name = "chatushka"
path = "src/main.rs"
bench = false
doc = false
